# trentxmeta.com

./: .gitignore  .pr-ready  CNAME  DEVELOPMENT.md  README.md  ai.css  ai.html  ai.js  blog.html  feed.xml  hyperreality.css  hyperreality.html  index.html  main.js  robots.txt  script.js  sitemap.xml  style.css  styles.css  vercel.json
api/: followers.js
backend/creator-ranking-backend/: pyproject.toml  requirements.txt
backend/creator-ranking-backend/app/: main.py
blog/: ai-web-development.html  ai-websites.html  building-sites-with-ai.html  crypto-memes.html  doginal-dogs.html  future-of-crypto-communities.html  index.html
blog/posts/: ai-web-development.html  ai-websites.html  building-sites-with-ai.html  crypto-memes.html  dca-bitcoin-xrp-ai.html  posts.json  welcome.html
contact/: index.html
creator-ranking-frontend/: .env  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
creator-ranking-frontend/src/: App.tsx  main.tsx
mood-painter/: index.html  script.js  style.css
